test/files/pos/t12892/Test.scala
class C {  
  def t(b: B): B = b.m
}
