test/files/neg/t7386/Test_1.scala
class C {
  A_1.B.m() // ok
  A_1.C.m() // C does not have a member m
}
